# RocksDict

./: .gitignore  Cargo.toml  justfile  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: CI.yml  PR.yml  rust-clippy.yml
docs/: rocksdict.html  search.js
python/rocksdict/: rocksdict.pyi
src/: checkpoints.rs  encoder.rs  iter.rs  lib.rs  options.rs  rdict.rs  snapshot.rs  sst_file_writer.rs  write_batch.rs
test/: test_rdict.py
