[package]
name = "RocksDict"
version = "0.3.25"
edition = "2021"
description = "Rocksdb Python Binding"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rocksdict"
crate-type = ["cdylib"]

[[bin]]
name = "create_cf_db"
path = "bin/create-cf-db/main.rs"
test = false

[dependencies]
rocksdb = { path = "rust-rocksdb", default-features = false, features = [
    "snappy",
    "lz4",
    "zstd",
    "zlib",
    "bzip2",
] }
librocksdb-sys = { path = "rust-rocksdb/librocksdb-sys", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
libc = "0.2"

[features]
default = ["bindgen-runtime", "lto"]
bindgen-runtime = ["rocksdb/bindgen-runtime"]
bindgen-static = ["rocksdb/bindgen-static"]
lto = ["rocksdb/lto"]

[dependencies.pyo3]
version = "0.22"
features = ["py-clone", "extension-module", "num-bigint"]

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
